Update Valentine's Day messages and titles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will You Be My capybara forever motu /Aashuuu? 💝</title>
+    <title>Me sua pratapa tu meri deewani ? 💝</title>
     <style>
         * {
             margin: 0;
@@ -197,7 +197,7 @@
         <div class="heart-emoji">❤️</div>
         
         <div id="gameContent">
-            <div class="question">Will You Be My Valentine?</div>
+            <div class="question">Will You Be My capybara forever motu /Aashuuu?</div>
             <div class="message" id="message"></div>
             <div class="buttons">
                 <button id="yesBtn">Yes! 💖</button>
@@ -207,8 +207,8 @@
         
         <div class="success-message" id="successMessage">
             <div class="celebration">🎉 💕 🎊</div>
-            <h2 style="color: #ff1744; margin: 20px 0;">Yay! You made my day! 💝</h2>
-            <p style="font-size: 1.2em; color: #333;">I'm so happy you said yes! ❤️</p>
+            <h2 style="color: #ff1744; margin: 20px 0;">Ab lagalo mandaan ! 💝</h2>
+            <p style="font-size: 1.2em; color: #333;">Tu baneli meri byoli! ❤️</p>
             <div class="celebration">💑 💐 🌹</div>
         </div>
     </div>
@@ -224,7 +224,7 @@
         const noMessages = [
             "Are you sure? 🥺",
             "Really? Think again! 💔",
-            "Please reconsider! 😢",
+            "Please reconsider! ",
             "Don't break my heart! 💘",
             "Are you absolutely certain? 😭",
             "One more chance? 🙏",
